chore(CI/CD): Se agrega las dependencias de JUnit 5

--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,19 @@
 			<artifactId>openxava</artifactId>
 			<version>${openxava.version}</version>
 		</dependency>
-		
-		<!-- 
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.10.2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>5.10.2</version>
+			<scope>test</scope>
+		</dependency>
+		<!--
 		To access to your database uncomment the corresponding entry 
 		from the below dependencies. If you don't find yours, look in
 		internet for the maven depencency for your database and add it 
