--- a/pom.xml
+++ b/pom.xml
@@ -175,20 +175,14 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>3.4.0</version>
-				<configuration>
-					<configLocation>google_checks.xml</configLocation>
-					<failOnViolation>true</failOnViolation>
-				</configuration>
-				<executions>
-					<execution>
-						<id>validate</id>
-						<phase>validate</phase>
-						<goals>
-							<goal>check</goal>
-						</goals>
-					</execution>
-				</executions>
+				<version>3.3.0</version>
+				<dependencies>
+					<dependency>
+						<groupId>com.google.guava</groupId>
+						<artifactId>guava</artifactId>
+						<version>30.1.1-jre</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
