chore(CI/CD): Se actualiza el plugin checkstyle
- Se especifica que se muestren los errores en consola.
- se integra checkstyle en la fase verify del ciclo de vida de maven.

--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,7 @@
 				<configuration>
 					<configLocation>google_checks.xml</configLocation>
 					<failOnViolation>true</failOnViolation>
+					<consoleOutput>true</consoleOutput>
 				</configuration>
 				<dependencies>
 					<dependency>
@@ -187,6 +188,14 @@
 						<version>30.1.1-jre</version>
 					</dependency>
 				</dependencies>
+				<executions>
+					<execution>
+						<phase>verify</phase>
+						<goals>
+							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
