chore: Se modifica el pom.xml
- Se actualiza la descripción
- Se corrige la ruta al MainApp

--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,11 @@
 
 	<name>Aplicación de Gestión de Inventario</name>
 	<description>
-		Herramienta desarrollada para el control eficiente del inventario en una tienda de mascotas. La aplicación ofrece las siguientes funcionalidades clave:
-		• Administración de Productos: Permite crear, actualizar, consultar y eliminar productos del catálogo, organizados en tres categorías principales: Alimentos, Accesorios e Insumos Veterinarios. Cada producto incluye información detallada como especificaciones técnicas, datos comerciales y segmentación por tipo de mascota.
-		• Planificación Inteligente de Reposición: Genera planes automáticos de reposición a partir del análisis de demanda histórica, niveles de inventario actuales y presupuestos definidos. El sistema detecta productos críticos, calcula cantidades óptimas de reposición y emite alertas por exceso o escasez de stock.
-		• Análisis y Reportes: Proporciona herramientas de filtrado, ordenamiento y análisis para apoyar la toma de decisiones, facilitando la identificación de patrones de consumo y evaluaciones de desempeño comercial.
+		Herramienta desarrollada para optimizar el control de inventario en una tienda de mascotas, ofreciendo funciones clave como la gestión integral de productos clasificados en alimentos, accesorios e insumos veterinarios, cada uno con información detallada y segmentación por tipo de mascota. Incluye un sistema inteligente de planificación de reposiciones que analiza la demanda histórica, los niveles actuales de stock y los presupuestos disponibles para generar alertas y recomendaciones automáticas. Además, proporciona capacidades de análisis y generación de reportes para apoyar la toma de decisiones estratégicas, facilitando la evaluación del desempeño comercial y la identificación de patrones de consumo.
 	</description>
 	<url>https://github.com/ChrisJMora/mascotin-inventory-management-application.git</url>
+
+
 
 	<!-- ===== PROPIEDADES DEL PROYECTO ===== -->
 	<properties>
@@ -308,8 +307,20 @@
 
 				<configuration>
 					<excludes>
-						<exclude>com/mascotin/inventorymanagementapplication/run/inventorymanagementapplication.class</exclude>
+						<exclude>com/mascotin/inventorymanagementapplication/run/InventoryManagementApp.class</exclude>
 					</excludes>
+					<rules>
+						<rule>
+							<element>BUNDLE</element>
+							<limits>
+								<limit>
+									<counter>INSTRUCTION</counter>
+									<value>COVEREDRATIO</value>
+									<minimum>0.10</minimum>
+								</limit>
+							</limits>
+						</rule>
+					</rules>
 				</configuration>
 
 				<executions>
