--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,20 +22,21 @@ concurrency:
 
 jobs:
 
+  # Job para construir las imágenes Docker
   build-containers:
     name: Creación de Contenedores Docker
     runs-on: ubuntu-latest
 
     steps:
-      # Paso 1: Clonar el repositorio
+      # Clonar el repositorio
       - name: Clonar el repositorio
         uses: actions/checkout@v4
 
-      # Paso 2: Configurar Docker Buildx para compilación avanzada
+      # Configurar Docker Buildx para build avanzado
       - name: Configurar Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # Paso 3: Crear archivo .env con las variables necesarias para el entorno de ejecución
+      # Crear archivo .env con variables secretas necesarias
       - name: Crear archivo .env
         run: |
           echo "MYSQL_USER=${{ secrets.MYSQL_USER }}" > .env
@@ -43,21 +44,22 @@ jobs:
           echo "MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_ROOT_PASSWORD }}" >> .env
           echo "MYSQL_DATABASE=${{ secrets.MYSQL_DATABASE }}" >> .env
 
-      # Paso 4: Construir imágenes Docker de los servicios definidos en docker-compose.yml
+      # Construir las imágenes Docker según docker-compose.yml
       - name: Construir imágenes Docker
         run: docker compose build
 
-  run-containers:
-    name: Ejecución de Contenedores Docker
+  # Job que levanta contenedores, valida servicios y apaga contenedores
+  run-and-validate:
+    name: Levantar y Validar Servicios Docker
     runs-on: ubuntu-latest
-    needs: build-containers  # Este job depende de que el build se haya completado
+    needs: build-containers  # Depende que se haya completado el build
 
     steps:
-      # Paso 1: Clonar el repositorio nuevamente en este job
+      # Clonar el repositorio
       - name: Clonar el repositorio
         uses: actions/checkout@v4
 
-      # Paso 2: Crear archivo .env con las mismas variables del job anterior
+      # Crear archivo .env con variables secretas (igual que en build)
       - name: Crear archivo .env
         run: |
           echo "MYSQL_USER=${{ secrets.MYSQL_USER }}" > .env
@@ -66,47 +68,41 @@ jobs:
           echo "MYSQL_DATABASE=${{ secrets.MYSQL_DATABASE }}" >> .env
           echo "MYSQL_HOST=db" >> .env
 
-      # Paso 3: Descargar el script wait-for-it.sh para esperar a que los servicios estén disponibles
+      # Descargar script wait-for-it para esperas condicionales
       - name: Descargar script wait-for-it
         run: |
           curl -o wait-for-it.sh https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.sh
           chmod +x wait-for-it.sh
 
-      # Paso 4: Levantar contenedores en segundo plano con docker compose
+      # Levantar contenedores en segundo plano
       - name: Iniciar contenedores con Docker Compose
         run: docker compose up -d
 
-      # Paso 5: Esperar a que MySQL esté disponible en el puerto 3306
+      # Esperar que MySQL esté disponible en el puerto 3306 (puerto mapeado a localhost)
       - name: Esperar a MySQL
-        run: ./wait-for-it.sh localhost:3306 --timeout=60 --strict -- echo "MySQL disponible"
+        run: ./wait-for-it.sh localhost:3306 --timeout=120 --strict -- echo "MySQL disponible"
 
-      # Paso 6: Esperar a que la aplicación web esté disponible en el puerto 8080
+      # Esperar que la aplicación esté disponible en el puerto 8080
       - name: Esperar a la Aplicación
-        run: ./wait-for-it.sh localhost:8080 --timeout=90 --strict -- echo "Aplicación disponible"
+        run: ./wait-for-it.sh localhost:8080 --timeout=180 --strict -- echo "Aplicación disponible"
 
-  validate-services:
-    name: Validación de Servicios en Ejecución
-    runs-on: ubuntu-latest
-    needs: run-containers  # Este job se ejecuta después de levantar los contenedores
-
-    steps:
-      # Paso 1: Verificar si los contenedores están activos
+      # Listar los contenedores activos para debug
       - name: Listar contenedores activos
         run: docker ps
 
-      # Paso 2: Verificar que la aplicación responda correctamente
+      # Validar que la aplicación responde HTTP correctamente
       - name: Validar respuesta HTTP de la aplicación
         run: |
           curl --fail http://localhost:8080 || (echo "La aplicación no responde correctamente" && exit 1)
 
-      # Paso 3: Verificar que la base de datos fue creada correctamente
+      # Validar que la base de datos fue creada correctamente
       - name: Verificar existencia de base de datos
         run: |
           docker exec $(docker ps -qf "name=db") \
             mysql -u${{ secrets.MYSQL_USER }} -p${{ secrets.MYSQL_PASSWORD }} \
             -e "SHOW DATABASES;" | grep ${{ secrets.MYSQL_DATABASE }}
 
-      # Paso 4: Apagar los contenedores luego de las validaciones
+      # Apagar los contenedores siempre, incluso si fallan las validaciones
       - name: Apagar contenedores
-        if: always()  # Este paso se ejecuta siempre, incluso si una validación falla
+        if: always()
         run: docker compose down
