chore: Se actualiza cd.yml

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -92,7 +92,7 @@ jobs:
 
       # Mostrar los logs de la aplicación para debug
       - name: Mostrar logs de la aplicación
-        run: docker logs $(docker ps -qf "name=app")
+        run: docker logs $(docker ps -qf "name=mascotin-inventory-management-application-app")
 
       # Validar que la aplicación responde HTTP correctamente
       - name: Validar respuesta HTTP de la aplicación
