--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,7 +22,6 @@ concurrency:
 
 jobs:
 
-  # Job para construir las imágenes Docker
   build-containers:
     name: Creación de Contenedores Docker
     runs-on: ubuntu-latest
@@ -32,11 +31,11 @@ jobs:
       - name: Clonar el repositorio
         uses: actions/checkout@v4
 
-      # Configurar Docker Buildx para build avanzado
+      # Configurar Docker Buildx para compilación avanzada
       - name: Configurar Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # Crear archivo .env con variables secretas necesarias
+      # Crear archivo .env con las variables necesarias
       - name: Crear archivo .env
         run: |
           echo "MYSQL_USER=${{ secrets.MYSQL_USER }}" > .env
@@ -44,22 +43,21 @@ jobs:
           echo "MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_ROOT_PASSWORD }}" >> .env
           echo "MYSQL_DATABASE=${{ secrets.MYSQL_DATABASE }}" >> .env
 
-      # Construir las imágenes Docker según docker-compose.yml
+      # Construir imágenes Docker definidas en docker-compose.yml
       - name: Construir imágenes Docker
         run: docker compose build
 
-  # Job que levanta contenedores, valida servicios y apaga contenedores
-  run-and-validate:
-    name: Levantar y Validar Servicios Docker
+  run-containers:
+    name: Levantar contenedores en segundo plano
     runs-on: ubuntu-latest
-    needs: build-containers  # Depende que se haya completado el build
+    needs: build-containers
 
     steps:
-      # Clonar el repositorio
+      # Clonar el repositorio nuevamente
       - name: Clonar el repositorio
         uses: actions/checkout@v4
 
-      # Crear archivo .env con variables secretas (igual que en build)
+      # Crear archivo .env con variables necesarias (incluyendo MYSQL_HOST)
       - name: Crear archivo .env
         run: |
           echo "MYSQL_USER=${{ secrets.MYSQL_USER }}" > .env
@@ -68,45 +66,58 @@ jobs:
           echo "MYSQL_DATABASE=${{ secrets.MYSQL_DATABASE }}" >> .env
           echo "MYSQL_HOST=db" >> .env
 
-      # Descargar script wait-for-it para esperas condicionales
+      # Descargar script wait-for-it para posibles esperas si quieres
       - name: Descargar script wait-for-it
         run: |
           curl -o wait-for-it.sh https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.sh
           chmod +x wait-for-it.sh
 
-      # Levantar contenedores en segundo plano
-      - name: Iniciar contenedores con Docker Compose
+      # Levantar contenedores en modo detached
+      - name: Levantar contenedores con Docker Compose
         run: docker compose up -d
 
-      # Esperar que MySQL esté disponible en el puerto 3306 (puerto mapeado a localhost)
-      - name: Esperar a MySQL
-        run: ./wait-for-it.sh localhost:3306 --timeout=120 --strict -- echo "MySQL disponible"
+  validate-services:
+    name: Validación y Espera Activa de Servicios
+    runs-on: ubuntu-latest
+    needs: run-containers
 
-      # Esperar que la aplicación esté disponible en el puerto 8080
-      - name: Esperar a la Aplicación
-        run: ./wait-for-it.sh localhost:8080 --timeout=180 --strict -- echo "Aplicación disponible"
-
-      # Listar los contenedores activos para debug
+    steps:
+      # Mostrar contenedores activos para diagnóstico
       - name: Listar contenedores activos
         run: docker ps
 
-      # Mostrar los logs de la aplicación para debug
+      # Esperar activamente a que la aplicación responda en localhost:8080
+      - name: Esperar a que la aplicación esté disponible en puerto 8080
+        run: |
+          for i in {1..30}; do
+            if curl --fail http://localhost:8080/health; then
+              echo "Aplicación lista y responde"
+              exit 0
+            fi
+            echo "Esperando aplicación... intento $i"
+            sleep 5
+          done
+          echo "Error: la aplicación no respondió a tiempo"
+          exit 1
+
+      # Mostrar logs de la aplicación para depuración si falla
       - name: Mostrar logs de la aplicación
+        if: failure()
         run: docker logs $(docker ps -qf "name=mascotin-inventory-management-application-app")
 
-      # Validar que la aplicación responde HTTP correctamente
-      - name: Validar respuesta HTTP de la aplicación
-        run: |
-          curl --fail http://localhost:8080 || (echo "La aplicación no responde correctamente" && exit 1)
+      # Mostrar logs de MySQL para depuración
+      - name: Mostrar logs de MySQL
+        if: failure()
+        run: docker logs $(docker ps -qf "name=mascotin-inventory-management-application-db")
 
-      # Validar que la base de datos fue creada correctamente
+      # Validar que la base de datos existe dentro del contenedor db
       - name: Verificar existencia de base de datos
         run: |
-          docker exec $(docker ps -qf "name=db") \
+          docker exec $(docker ps -qf "name=mascotin-inventory-management-application-db") \
             mysql -u${{ secrets.MYSQL_USER }} -p${{ secrets.MYSQL_PASSWORD }} \
             -e "SHOW DATABASES;" | grep ${{ secrets.MYSQL_DATABASE }}
 
-      # Apagar los contenedores siempre, incluso si fallan las validaciones
+      # Apagar contenedores siempre al finalizar las validaciones
       - name: Apagar contenedores
         if: always()
         run: docker compose down
